[gd_scene load_steps=38 format=3 uid="uid://caxv4cpsvvpdc"]

[ext_resource type="Script" path="res://gameObjects/enemies/meleeBot/melee_bot.gd" id="1_gtn4p"]
[ext_resource type="Texture2D" uid="uid://ce61w072tsfma" path="res://art/Enemies/enemies x1.png" id="1_wgfrb"]
[ext_resource type="Shader" path="res://gameObjects/enemies/enemy.gdshader" id="2_1kest"]
[ext_resource type="AudioStream" uid="uid://cb1c4jf44tn77" path="res://sfx/SCI-FI_UI_SFX_PACK/Rings/Ring_Pitched_Up_1.wav" id="4_0lrud"]
[ext_resource type="AudioStream" uid="uid://y4tucfhbsfxn" path="res://gameObjects/resources/footsteps.tres" id="5_tkb8o"]
[ext_resource type="AudioStream" uid="uid://eh63ej0ofcr3" path="res://sfx/SCI-FI_UI_SFX_PACK/Glitches/Glitch_3.wav" id="6_ucyem"]
[ext_resource type="AudioStream" uid="uid://bw5de6mvi8y80" path="res://sfx/SCI-FI_UI_SFX_PACK/Glitches/Glitch_4.wav" id="7_y1uxm"]
[ext_resource type="AudioStream" uid="uid://cyshefdvwrhjt" path="res://sfx/SCI-FI_UI_SFX_PACK/Glitches/Glitch_22.wav" id="8_a2375"]
[ext_resource type="AudioStream" uid="uid://feq6wsaru7w1" path="res://sfx/SCI-FI_UI_SFX_PACK/Glitches/Glitch_20.wav" id="9_5ymqx"]
[ext_resource type="AudioStream" uid="uid://bl518wjv3bn5k" path="res://sfx/SCI-FI_UI_SFX_PACK/Glitches/Glitch_14.wav" id="10_jh152"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gpj6i"]
size = Vector2(38, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y346b"]
size = Vector2(26, 29)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4cp27"]
resource_local_to_scene = true
shader = ExtResource("2_1kest")
shader_parameter/flash_white = false

[sub_resource type="AtlasTexture" id="AtlasTexture_qn4ds"]
atlas = ExtResource("1_wgfrb")
region = Rect2(0, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2nrw"]
atlas = ExtResource("1_wgfrb")
region = Rect2(32, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubjtp"]
atlas = ExtResource("1_wgfrb")
region = Rect2(64, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf240"]
atlas = ExtResource("1_wgfrb")
region = Rect2(96, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_washy"]
atlas = ExtResource("1_wgfrb")
region = Rect2(128, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1v3l"]
atlas = ExtResource("1_wgfrb")
region = Rect2(160, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7e2tn"]
atlas = ExtResource("1_wgfrb")
region = Rect2(192, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_whs27"]
atlas = ExtResource("1_wgfrb")
region = Rect2(224, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_odjod"]
atlas = ExtResource("1_wgfrb")
region = Rect2(288, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyu1g"]
atlas = ExtResource("1_wgfrb")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3y0gv"]
atlas = ExtResource("1_wgfrb")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0emxd"]
atlas = ExtResource("1_wgfrb")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebkur"]
atlas = ExtResource("1_wgfrb")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bfj3"]
atlas = ExtResource("1_wgfrb")
region = Rect2(0, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x62hy"]
atlas = ExtResource("1_wgfrb")
region = Rect2(32, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pes7m"]
atlas = ExtResource("1_wgfrb")
region = Rect2(64, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5ttk"]
atlas = ExtResource("1_wgfrb")
region = Rect2(96, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfrrv"]
atlas = ExtResource("1_wgfrb")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctp2j"]
atlas = ExtResource("1_wgfrb")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1y2aw"]
atlas = ExtResource("1_wgfrb")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_isg0u"]
atlas = ExtResource("1_wgfrb")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_peofg"]
atlas = ExtResource("1_wgfrb")
region = Rect2(96, 256, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_sybc7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qn4ds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2nrw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubjtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf240")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_washy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1v3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7e2tn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whs27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odjod")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyu1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3y0gv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0emxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebkur")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bfj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x62hy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pes7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5ttk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfrrv")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctp2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1y2aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isg0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_peofg")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_tjb7n"]
streams_count = 5
stream_0/stream = ExtResource("6_ucyem")
stream_0/weight = 1.0
stream_1/stream = ExtResource("7_y1uxm")
stream_1/weight = 1.0
stream_2/stream = ExtResource("8_a2375")
stream_2/weight = 1.0
stream_3/stream = ExtResource("9_5ymqx")
stream_3/weight = 1.0
stream_4/stream = ExtResource("10_jh152")
stream_4/weight = 1.0

[node name="meleeBot" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 4
collision_mask = 34
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_gtn4p")

[node name="attackBox" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackBox"]
position = Vector2(-1, 3)
shape = SubResource("RectangleShape2D_gpj6i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2.5)
shape = SubResource("RectangleShape2D_y346b")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_4cp27")
sprite_frames = SubResource("SpriteFrames_sybc7")
animation = &"walk"
autoplay = "idle"
frame_progress = 0.172219

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="SFX" type="Node" parent="."]

[node name="hitSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("4_0lrud")
volume_db = -10.0
max_distance = 1000.0
attenuation = -1.0

[node name="footstepSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("5_tkb8o")
volume_db = -10.0
attenuation = -1.0
bus = &"SFX"

[node name="deathSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_tjb7n")
volume_db = -10.0
attenuation = -1.0

[connection signal="body_entered" from="attackBox" to="." method="_on_attack_box_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
